# stellapply

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  go.mod  go.sum  login_token.json  pyproject.toml  sqlc.yaml  start-chrome-debug.sh  verify_truthfulness.py
.agent/workflows/: open-browser.md
.github/workflows/: ci.yml  deploy.yml
ai-service/: list_models.py  main.py  requirements.txt
ai-service/app/core/: llm.py
cmd/api/: main.go
config/keycloak/: realm-export.json
docs/: CHANGELOG.md  CONTRIBUTING.md  api_documentation.md  configuration.md  database_schema.md  installation.md  project_overview.md  project_structure.md  system_architecture.md  technical_requirements.md  troubleshooting.md
docs/architecture/: modular_monolith.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: navbar.tsx  resume-preview.tsx
frontend/components/ui/: hand-drawn.tsx
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: resume-form.tsx
frontend/src/hooks/: use-ai-enhancement.ts  use-truthful-enhancement.ts
frontend/src/stores/: applications.store.ts  auth.store.ts  index.ts  jobs.store.ts  persona.store.ts  resume.store.ts
infrastructure/docker/: Dockerfile.api  Dockerfile.frontend
infrastructure/kubernetes/: api-deployment.yaml  ingress.yaml  namespace.yaml  worker-deployment.yaml
internal/application/service/: application_service.go  persona_service.go  (+2 more)
internal/domain/: application.go  persona.go  resume.go  user.go
migrations/: 00001_initial_schema.sql  00002_data_governance.sql
pkg/config/: config.go
scripts/: generate_tree.py  populate_pages.py  resolve_conflicts.py  seed_test_data.py  setup_demo_user.py  test_agent_brain.py  test_agent_profile_integration.py  test_browser_engine.py  test_form_mapper.py  test_hitl_flow.py  test_profile_engine.py  verify_ats.sh  verify_job_search.sh  verify_orchestrator.py  verify_persona.sh  verify_persona_cv_architecture.py  verify_recovery.py  verify_resume.sh  verify_scout_agent.py
src/agent/: __init__.py  api.py  brain.py  executor.py  orchestrator.py  router.py
src/api/: exceptions.py  main.py
src/core/: config.py
src/workers/: celery_app.py
tests/: conftest.py
tests/e2e/: test_auth_security.py  test_login_flow.py
tests/scripts/: debug_keycloak.py  init_keycloak.py  manual_create_user.py  test_kc_login.py
tests/unit/: conftest.py
tests_unit/: demo_persona_cv.py
(+262 files in other folders)
